--- a/theory_fundamental_NN.tex
+++ b/theory_fundamental_NN.tex
@@ -12,7 +12,7 @@ Each encoder block consists of two sub-layers. First, a multi-head self-attentio
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.4\textwidth]{images/Background/transformer.png}  % adjust filename and width
-    \caption{Transformer architecture from \cite{AttentionIsAllYouNeed}.}
+    \caption[Transformer Architecture]{Visualization of the transformer architecture. Taken from \cite{AttentionIsAllYouNeed}.}
     \label{transformer_architecture}
 \end{figure}
 
@@ -49,7 +49,7 @@ One main challenge of the discussed attention mechanism is that it has quadratic
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{images/Background/SelfAttention.png}  % adjust filename and width
-    \caption{Self-attention mechanism based on \cite{SelfAttentionFigure}.}
+    \caption[Self-Attention Mechanism]{Visualization of the self-attention mechanism. Based on \cite{SelfAttentionFigure}.}
     \label{SelfAttentionFigure}
 \end{figure}
  
@@ -60,7 +60,7 @@ The goal of cross-attention is to relate two different sequences of tokens \text
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{images/Background/CrossAttention.png}  % adjust filename and width
-    \caption{Cross-attention mechanism based on \cite{SelfAttentionFigure}.}
+    \caption[Cross-Attention Mechanism]{Visualization of the cross-attention mechanism. Based on \cite{SelfAttentionFigure}.}
     \label{CrossAttentionFigure}
 \end{figure}
 
@@ -75,7 +75,7 @@ This is advantageous because the individual heads can concentrate on different t
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.3\textwidth]{images/Background/multi-head-attention.png}  % adjust filename and width
-    \caption{Multi-head attention from \cite{AttentionIsAllYouNeed}.}
+    \caption[Multi-Head Attention]{Visualization of the multi-head attention mechanism. Taken from \cite{AttentionIsAllYouNeed}.}
     \label{MultiHeadAttention}
 \end{figure}
 
@@ -150,7 +150,7 @@ The introduction of vision transformer (\gls{ViT}) \cite{VisionTransformer} for 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/Background/VisionTransformer.png}  % adjust filename and width
-    \caption{Vision transformer from \cite{VisionTransformer}.}
+    \caption[Vision Transformer Architecture]{Visualization of vision transformer architecture. Taken from \cite{VisionTransformer}.}
     \label{VisionTransformer}
 \end{figure}
 
