--- a/theory_metrics.tex
+++ b/theory_metrics.tex
@@ -50,7 +50,7 @@ For each category, the prompt follows a specific structure. For the benchmark, 5
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1.0\textwidth]{images/Background/GenEval.png}  % adjust filename and width
-	\caption{Example of how image is investigated for GenEval benchmark  \cite{ghosh2023geneval}.}
+	\caption[GenEval Benchmark]{Visualization of the evaluation procedure for the GenEval benchmark. Taken from \cite{ghosh2023geneval}.}
 	\label{Geneval}
 \end{figure}
 
